# dbus-marshal

./: Cargo.toml
src/: authentication.rs  header.rs  lib.rs  marshal.rs  message.rs  signature.rs  strings.rs  types.rs  unmarshal.rs
src/marshal/: writer.rs
src/message/: serial.rs
src/unmarshal/: iter.rs
