[package]
name = "dbus-marshal"
version = "0.1.0"
edition = "2024"

[features]
std = []

[dependencies]
arrayvec = { version = "0.7.6", default-features = false }
rustix = { version = "1.1.3", default-features = false }
static_assertions = "1.1.0"
zerocopy = { version = "0.8.33", features = ["derive", "std"] }
